Create FileExplorerDialog and its resources (xml, icons)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="filter">Filter</string>
     <string name="clear">Clear</string>
     <string name="settings">Settings</string>
+    <string name="select">Select</string>
 
     <!-- APDialog (xml) -->
     <string name="mac">MAC:</string>
