--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,8 +45,8 @@
     <string name="reset_dialog_title">Reset Preferences?</string>
 
     <!-- CrackFragment -->
-    <string name="path_to_cap">Path to .cap file</string>
-    <string name="path_to_wordlist">Path to wordlist</string>
+    <string name="path_to_cap">.cap file</string>
+    <string name="path_to_wordlist">Wordlist</string>
     <string name="start">Start</string>
     <string name="wordlist_notfound">Wordlist not found</string>
     <string name="select_wpa_wep">Please select WPA/WEP</string>
