Change 'Install Firmware' description, update version and build tools

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+﻿<resources>
     <string name="app_name" translatable="false">Hijacker</string>
 
     <!-- Toolbar -->
@@ -352,7 +352,7 @@
     <!-- Tools -->
     <string name="tools">Tools</string>
     <string name="install_nexmon_title">Install Nexmon</string>
-    <string name="install_nexmon_sum">Install the Nexmon driver and its management utility (nexutil at /su/xbin)</string>
+    <string name="install_nexmon_sum">Install the Nexmon driver and its management utility</string>
         <!-- xml -->
         <string name="firm_location_text">Firmware Location</string>
         <string name="util_location_text">Management Utility Location</string>
