Use auto-resizable TextViews, prevent keyboard from popping up when opening dialogs with EditTexts, add manufacturer filter, classes AP and ST now handle the options popups, minor code improvements, update version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,7 @@
     <string name="sort_beacons_frames">By beacons/frames</string>
     <string name="sort_data_frames">By data/frames</string>
     <string name="sort_pwr">By power</string>
+    <string name="manuf_filter">Manuf. Filter</string>
 
     <!-- FirstRunDialog -->
     <string name="first_run_title">Welcome</string>
