Check for bootkali_init in nethunter app directory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -310,7 +310,7 @@
     <string name="iface" translatable="false">wlan0</string>
     <string name="prefix" translatable="false">LD_PRELOAD=/vendor/lib/libfakeioctl.so</string>
     <string name="chroot_dir" translatable="false">/data/local/nhsystem/kali-armhf</string>
-    <string name="monstart" translatable="false">true</string>
+    <string name="monstart" translatable="false">false</string>
     <string name="cap_dir" translatable="false">/sdcard/cap</string>
     <string name="enable_monMode" translatable="false">nexutil -m true</string>
     <string name="disable_monMode" translatable="false">nexutil -m false</string>
