--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="access_point">Access Point</string>
     <string name="station">Station</string>
     <string name="kill_process_on_stop">Has process to kill when implicitly stopping the action</string>
+    <string name="process_name">Process name</string>
 
     <!-- DisclaimerDialog -->
     <string name="disclaimer_title">Disclaimer</string>
@@ -148,7 +149,7 @@
     <string name="sort_beacons_frames">By beacons/frames</string>
     <string name="sort_data_frames">By data/frames</string>
     <string name="sort_pwr">By power</string>
-    <string name="manuf_filter">Manuf. Filter</string>
+    <string name="manuf_filter">Manufacturer Filter</string>
 
     <!-- FirstRunDialog -->
     <string name="first_run_title">Welcome</string>
@@ -162,9 +163,8 @@
     <string name="install_firmware">Install Nexmon</string>
 
     <!-- InstallFirmwareDialog -->
-    <string name="dir_notfound_firm">Directory for Firmware doesn\'t exist</string>
-    <string name="dir_notfound_util">Directory for Utility doesn\'t exist</string>
-    <string name="firm_notfound">There is no fw_bcmdhd.bin in there</string>
+    <string name="dir_notfound">Directory doesn\'t exist</string>
+    <string name="firm_notfound">There is no fw_bcmdhd.bin in here</string>
     <string name="backup_exists">A backup already exists</string>
     <string name="backup_created">Backup created</string>
     <string name="installed_firm_util">Installed firmware and utility</string>
@@ -174,6 +174,7 @@
     <string name="path_contains_system">Modifying the system partition can brick some devices. Long click to override.</string>
     <string name="firm_location_empty">Firmware location is empty</string>
     <string name="util_location_empty">Utility location is emtpy</string>
+    <string name="field_required">This field is required</string>
 
     <!-- IsolatedFragment (xml) -->
     <string name="crack">Crack</string>
@@ -246,6 +247,7 @@
     <string name="not_file_or_exists">doesn\'t exist or is not a file</string>
     <string name="custom_ap_title">Custom AP</string>
     <string name="mac_address">MAC Address</string>
+    <string name="ssid_file_optional">SSID file (optional)</string>
     <string name="optional">(Optional)</string>
 
     <!-- MyListFragment -->
@@ -280,6 +282,8 @@
     <string name="restart_hijacker">Restart</string>
     <string name="use_email">Use email</string>
     <string name="extra">Extra</string>
+    <string name="email_optional">Email (optional)</string>
+    <string name="extra_optional">Extra (optional)</string>
 
     <!-- ST -->
     <string name="paired">Paired:</string>
