--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -257,7 +257,7 @@
 
     <!-- SendLogActivity -->
     <string name="unexpected_error_title">Unexpected Error</string>
-    <string name="unexpected_error_message">An unexpected error has occurred. A bug report has been generated in your external storage directory.</string>
+    <string name="unexpected_error_message">An unexpected error has occurred. A bug report has been generated in your external storage directory. It may contain sensitive information such as MAC addresses, aliases and device information. Check the file below before sending it.</string>
     <string name="restart_hijacker">Restart</string>
     <string name="cant_create_report">Can\'t create report (external storage write access denied)</string>
     <string name="report_not_created">Report was not created</string>
